# BonsaiSceneGraph

./: CMakeLists.txt  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md
Data/: ai_earth_sunrise_avatar.tiff  spaceship_lowpoly.mtl
bonsai/: BatchNode.cpp  BatchNode.h  BmpLoader.cpp  BmpLoader.h  BoundsUtils.cpp  BoundsUtils.h  CMakeLists.txt  Drawable.h  Geode.cpp  Geode.h  Geometry.cpp  Geometry.h  Group.cpp  Group.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  JpegLoader.cpp  JpegLoader.h  Node.cpp  Node.h  ObjLoader.cpp  ObjLoader.h  PngLoader.cpp  PngLoader.h  RenderState.h  SgiRgbLoader.cpp  SgiRgbLoader.h  Shader.cpp  Shader.h  TestUtils.cpp  TestUtils.h  TiffLoader.cpp  TiffLoader.h  UniformDrawable.cpp  UniformDrawable.h  Viewer.cpp  Viewer.h  WicImageLoader.cpp  (+1 more)
docs/: ARCHITECTURE.md
examples/: CMakeLists.txt  CMakeLists.txt.bak
examples/BatchNodes/: CMakeLists.txt  main.cpp
examples/BatchNodes3D/: CMakeLists.txt  main.cpp
examples/Data/: ai_earth_sunrise_avatar.rgb
examples/ExternalHostWindow/: CMakeLists.txt  main.cpp
examples/LoadDrawImage/: CMakeLists.txt  main.cpp
examples/OBJLoaderTest/: CMakeLists.txt  main.cpp
examples/PhongLoader/: CMakeLists.txt  main.cpp
examples/PhongPerMaterial/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp
examples/RenderToPNG/: CMakeLists.txt  main.cpp
examples/RotatingCube/: CMakeLists.txt  main.cpp
examples/RotatingExternalTriangle/: CMakeLists.txt
examples/RotatingTriangle/: CMakeLists.txt  main.cpp  main.cpp.bak
examples/ShaderMultiTextureTriangle/: CMakeLists.txt  main.cpp
examples/ShaderTextureTriangle/: CMakeLists.txt  main.cpp
(+2 files in other folders)
